# wav2letter

./: CMakeLists.txt  Distill.cpp  Train.cpp  simpledecoder.cpp  w2l.cpp  w2l.h  w2l_forward.cpp  w2l_p.h  w2lexport.c  w2lstream.cpp  w2lstream.h  wavstream.c
cmake/: FindMKL.cmake
inference/inference/common/: DefaultMemoryManager.cpp
inference/inference/module/nn/backend/fbgemm/: PackedGemmMatrixFP16.h
kenlm/: CMakeLists.txt  README
src/common/: Defines.cpp  Defines.h  FlashlightUtils.cpp  Transforms.cpp  Transforms.h
src/data/: Featurize.h  W2lListFilesDataset.cpp
src/decoder/: LM.h  LexiconDecoder.cpp  LexiconDecoder.h  LexiconFreeDecoder.h  Seq2SeqDecoder.h  TokenLMDecoder.cpp  Trie.cpp  Trie.h  Utils.h  WordLMDecoder.cpp
src/libraries/common/: Utils.cpp
src/libraries/decoder/: Trie.cpp  Trie.h
src/libraries/feature/: Derivatives.cpp  PowerSpectrum.cpp  PowerSpectrum.h  SpeechUtils.cpp
src/libraries/lm/: KenLM.cpp  KenLM.h
src/lm/: KenLM.cpp  KenLM.h
src/module/: CMakeLists.txt  Conformer.cpp  Conformer.h  W2lModule.cpp  W2lModule.h
src/runtime/: Logger.cpp  Logger.h  Serial.h
tools/: CMakeLists.txt
w2l/: b2l.h  b2l.txt  b2l_test.cpp  cli.cpp  decode_core.cpp  simpledecoder.cpp  w2l.cpp  w2l.h  w2l_common.h  w2l_decode.cpp  w2l_decode.h  w2l_decode_backend.cpp  w2l_encode.cpp  w2l_encode.h  w2l_encode_backend.cpp  w2l_encode_backend.h  w2l_forward.cpp  w2l_p.h  w2lstream.cpp  w2lstream.h
